--- a/robot_framework/report.html
+++ b/robot_framework/report.html
@@ -1897,28 +1897,28 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,67543],[],[[4,0,0,[],[1,483,14269],[]],[5,0,0,[],[1,14753,52787],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,116266],[],[[4,0,0,[],[1,18487,97777],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*C:\\Users\\user\\PycharmProjects\\pythonProject_WD_eve_jan2024\\robot_framework\\login.robot","*login.robot","*Login in to nopcommerce page","*Login in to nopcommerce page-ddt"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Excel","*C:\\Users\\user\\PycharmProjects\\pythonProject_WD_eve_jan2024\\robot_framework\\login_excel.robot","*login_excel.robot","*Login in to nopcommerce page-ddt"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:07","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:01:08","fail":0,"id":"s1","label":"Login","name":"Login","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:38","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:56","fail":0,"id":"s1","label":"Login Excel","name":"Login Excel","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1709782095464;
+window.output["baseMillis"] = 1709867856296;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 67599;
+window.output["generated"] = 117911;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"background":{"fail":"#f66","pass":"#9e9","skip":"#fed84f"},"logURL":"log_test.html","rpa":false,"title":""};
+window.settings = {"background":{"fail":"#f66","pass":"#9e9","skip":"#fed84f"},"logURL":"log.html","rpa":false,"title":""};
 </script>
 <title></title>
 </head>
